day-16/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: authservice:latest
          imagePullPolicy: "Never"
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-srv-cl-ip
spec:
  selector:
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 4003
      targetPort: 4003
