day-16/infra/k8s/mongo-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      name: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
