day-16/infra/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: products:latest
          imagePullPolicy: "Never"
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv-cl-ip
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 4000
      targetPort: 4000
