day-16/infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: onlineshopping.com
      http:
        paths:
          - path: /product/create
            pathType: Prefix
            backend:
              service:
                name: product-srv-cl-ip
                port:
                  number: 4000
          - path: /products/?(.*)/reviews
            pathType: Prefix
            backend:
              service:
                name: reviews-srv-cl-ip
                port:
                  number: 4001
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: query-srv-cl-ip
                port:
                  number: 4002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv-cl-ip
                port:
                  number: 3000
